fix: dots slider

--- a/dev/pug/includes/content-index.pug
+++ b/dev/pug/includes/content-index.pug
@@ -12,18 +12,23 @@ main.main
 						.section-slider__title Полноценный рацион для собак и кошек
 						.section-slider__text Каждый питомец заслуживает корма, который отвечает его потребностям
 						a.button(href="") В КАТАЛОГ
+				.section-slider__slide(style="background-image:url(./img/slide.jpg)")
+					.section-slider__info 
+						.section-slider__title Полноценный рацион для собак и кошек
+						.section-slider__text Каждый питомец заслуживает корма, который отвечает его потребностям
+						a.button(href="") В КАТАЛОГ
 	.section-categories 
 		.container 
 			.section-categories__items 
-				a.section-categories__item(href="" style="background-image:url(../img/category-cats.png)") 
+				a.section-categories__item(href="" style="background-image:url(./img/category-cats.png)") 
 					span КОШКИ
-				a.section-categories__item(href="" style="background-image:url(../img/category-dogs.png)") 
+				a.section-categories__item(href="" style="background-image:url(./img/category-dogs.png)") 
 					span СОБАКИ
-				a.section-categories__item(href="" style="background-image:url(../img/category-ferrets.png)") 
+				a.section-categories__item(href="" style="background-image:url(./img/category-ferrets.png)") 
 					span ХОРЬКИ
-				a.section-categories__item(href="" style="background-image:url(../img/category-birds.png)") 
+				a.section-categories__item(href="" style="background-image:url(./img/category-birds.png)") 
 					span ПТИЦЫ
-				a.section-categories__item(href="" style="background-image:url(../img/category-rodents.png)") 
+				a.section-categories__item(href="" style="background-image:url(./img/category-rodents.png)") 
 					span ГРЫЗУНЫ
 	.section-about 
 		.container 
