--- a/dev/styles/import/base.scss
+++ b/dev/styles/import/base.scss
@@ -381,27 +381,30 @@ textarea {
 //     margin: 0;
 //   }
 // }
-// .slick-dots {
-//   @include ul-clean;
-//   @include flexcc;
-//   gap: 1rem;
-//   position: absolute;
-//   bottom: 2.6rem;
-//   width: 100%;
-//   left: 0;
-// }
-// .slick-dots button {
-//   @include wh(1rem);
-//   border-radius: 50%;
-//   background: #fbf7f7;
-//   opacity: 0.3;
-//   @include tr;
-//   font-size: 0;
-//   padding: 0;
-// }
-// .slick-dots .slick-active button {
-//   opacity: 1;
-// }
+.slick-dots {
+  @include ul-clean;
+  @include flexcc;
+  gap: 1rem;
+  position: absolute;
+  bottom: 6.6rem;
+  gap: 2rem;
+  right: 24rem;
+  align-items: flex-end;
+}
+.slick-dots button {
+  @include wh(0.8rem);
+  border-radius: 50%;
+  background: #fff;
+  opacity: 1;
+  @include tr;
+  font-size: 0;
+  padding: 0;
+  outline: 0.7rem solid rgba(255, 255, 255, 0);
+}
+.slick-dots .slick-active button {
+  background: none;
+  outline: 0.7rem solid #fff !important;
+}
 .slick-prev,
 .slick-next {
   width: 6rem;
