--- a/dev/pug/includes/content-main.pug
+++ b/dev/pug/includes/content-main.pug
@@ -1,5 +1,10 @@
 main.main
-	a(href="index.html") Главная
+	.section-categories
+		.container
+			p Список страниц
+			ul 
+				li
+					a(href="index.html") Главная
 	//- a(href="404.html") 404
 	//- a(href="text.html") Текстовая
 						//- form(action="" method="")
