bug: footer padding

--- a/dev/styles/import/header.scss
+++ b/dev/styles/import/header.scss
@@ -99,6 +99,9 @@
   }
 }
 .nav {
+  @media (max-width: $breakpoint-tablet) {
+    display: none;
+  }
   .search-active & {
     display: none;
   }
