--- a/dev/styles/import/footer.scss
+++ b/dev/styles/import/footer.scss
@@ -8,6 +8,9 @@
     border-radius: 1rem;
     background: #fff;
     padding: 4.6rem 13.7rem 6.5rem 4.8rem;
+    @media (max-width: 1440px) {
+      padding-right: 6.3rem;
+    }
   }
   &__info {
     display: flex;
