--- a/dev/styles/import/main.scss
+++ b/dev/styles/import/main.scss
@@ -5,14 +5,14 @@
   }
   &__slide {
   }
-  &__img {
-    display: none;
-    @media (max-width: $breakpoint-mobile) {
-      display: block;
-      border-radius: 1rem;
-      margin-bottom: 3.2rem;
-    }
-  }
+  // &__img {
+  //   display: none;
+  //   @media (max-width: $breakpoint-mobile) {
+  //     display: block;
+  //     border-radius: 1rem;
+  //     margin-bottom: 3.2rem;
+  //   }
+  // }
   &__inner {
     height: 60rem;
     background-position: right top;
@@ -20,6 +20,14 @@
     background-repeat: no-repeat;
     padding: 1rem;
     border-radius: 1rem;
+    .section-slider__img {
+      display: none;
+      @media (max-width: $breakpoint-mobile) {
+        display: block;
+        border-radius: 1rem;
+        margin-bottom: 3.2rem;
+      }
+    }
     @media (max-width: $breakpoint-mobile) {
       background-image: none !important;
       height: auto;
