--- a/dev/pug/includes/footer.pug
+++ b/dev/pug/includes/footer.pug
@@ -3,19 +3,19 @@ footer.footer
 		.footer__inner
 			.footer__info
 				.footer__logo 
-					a(href="/")
+					a(href="index.html")
 						img(src="./img/logo.png" alt="")
 				.footer__menu 
 					ul 
 						li 
-							a(href="") КАТАЛОГ
+							a(href="catalog.html") КАТАЛОГ
 						li 
-							a(href="") где купить
+							a(href="where-buy.html") где купить
 						li 
-							a(href="") новости и статьи
+							a(href="news.html") новости и статьи
 					ul
 						li 
-							a(href="") контакты
+							a(href="contacts.html") контакты
 				.footer__contacts 
 					a.footer__phone(href="tel:+7 928 229-78-08") +7 928 229-78-08
 					a.footer__mail(href="") pki.zoo-mir@yandex.ru
@@ -28,4 +28,29 @@ footer.footer
 	.popup 
 		.popup__title Ваша заявка принята
 		.popup__text в ближайшее время с вами свяжется наш специалист
+#order-popup.white-popup.mfp-hide
+	.popup 
+		.popup__title Заказать
+		.popup__text Наш специалист свяжется с вами в ближайшее время.
+		.popup__form
+			form.form
+				.form__input-block
+					input.form__input(type="text" value="" name="")
+					label.form__label ФИО *
+				.form__input-block
+					input.form__input(type="tel" value="" name="")
+					label.form__label Телефон *
+				.form__input-block
+					input.form__input(type="email" value="" name="")
+					label.form__label Email *
+				.form__input-block
+					input.form__input(type="text" value="" name="")
+					label.form__label “Телятина и баранина» кусочки мяса в соусе”
+				.form__textarea-block
+					textarea.form__textarea
+					label.form__label Комментарий
+				.form__agree
+					+custom-checkbox('Я прочитал и принимаю условия Политики конфиденциальности и Правил обработки персональных данных')
+				button.button.button_full.form__submit.open-popup-link(type="submit" data-mfp-src="#thanks-popup") ЗАКАЗАТЬ
+
 
