--- a/dev/pug/mixins/mixins.pug
+++ b/dev/pug/mixins/mixins.pug
@@ -8,7 +8,7 @@ mixin product-card(imgsrc, name, price)
 				.variants-items 
 					.variants-item 5 кг
 					.variants-item 15 кг
-			a.button.button_white.button_full.button_to-order(href="") ЗАКАЗАТЬ
+			a.button.button_white.button_full.button_to-order.open-popup-link(href="" data-mfp-src="#order-popup") ЗАКАЗАТЬ
 
 mixin list-links (...items)
 	ul
