--- a/dev/styles/import/footer.scss
+++ b/dev/styles/import/footer.scss
@@ -115,6 +115,10 @@
           color: $color-text-dark;
           text-transform: uppercase;
           font-family: $font;
+          @include tr;
+          &:hover {
+            color: #ffa200;
+          }
         }
       }
     }
