--- a/dev/pug/includes/content-index.pug
+++ b/dev/pug/includes/content-index.pug
@@ -62,63 +62,65 @@ main.main
 	.section-news 
 		.container 
 			.h1 новости и статьи
-			.section-news__items 
-				.section-news__item 
-					a.section-news__info(href="")
-						img.section-news__img(src="./img/news1.jpg" alt="")
-						span.section-news__date 13.12.2023
-					a.section-news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
-				.section-news__item 
-					a.section-news__info(href="")
-						img.section-news__img(src="./img/news2.jpg" alt="")
-						span.section-news__date 13.12.2023
-					a.section-news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
-				.section-news__item 
-					a.section-news__info(href="")
-						img.section-news__img(src="./img/news3.jpg" alt="")
-						span.section-news__date 13.12.2023
-					a.section-news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
-				.section-news__item 
-					a.section-news__info(href="")
-						img.section-news__img(src="./img/news4.jpg" alt="")
-						span.section-news__date 13.12.2023
-					a.section-news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
+			.section-news__items.section__slider
+				- for (var x = 0; x < 2; x++)
+					.section-news__item 
+						a.section-news__info(href="")
+							img.section-news__img(src="./img/news1.jpg" alt="")
+							span.section-news__date 13.12.2023
+						a.section-news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
+					.section-news__item 
+						a.section-news__info(href="")
+							img.section-news__img(src="./img/news2.jpg" alt="")
+							span.section-news__date 13.12.2023
+						a.section-news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
+					.section-news__item 
+						a.section-news__info(href="")
+							img.section-news__img(src="./img/news3.jpg" alt="")
+							span.section-news__date 13.12.2023
+						a.section-news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
+					.section-news__item 
+						a.section-news__info(href="")
+							img.section-news__img(src="./img/news4.jpg" alt="")
+							span.section-news__date 13.12.2023
+						a.section-news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
 	.section-brands
 		.container 
 			.h1 БРЕНДЫ
-			.section-brands__items
-				a.section-brands__item(href="")
-					span.section-brands__premium Премиум-бренд
-					span.section-brands__logo 
-						img(src="./img/brand1.png" alt="")
-					span.section-brands__list 
-						span.section-brands__list-item Консервированные корма
-						span.section-brands__list-item Сухие корма для котят
-						span.section-brands__list-item Сухие корма для взрослых кошек
-						span.section-brands__list-item Сухие корма для пожелых кошек
-						span.section-brands__list-item Гигиенические наполнители
-				a.section-brands__item(href="")
-					span.section-brands__logo 
-						img(src="./img/brand2.png" alt="")
-					span.section-brands__list 
-						span.section-brands__list-item Консервированные корма
-						span.section-brands__list-item Сухие корма для щенков
-						span.section-brands__list-item Сухие корма для взрослых собак
-						span.section-brands__list-item Сухие корма для пожилых собак
-						span.section-brands__list-item Лакомства для собак
-				a.section-brands__item(href="")
-					span.section-brands__logo 
-						img(src="./img/brand3.png" alt="")
-					span.section-brands__list 
-						span.section-brands__list-item Консервированные корма с травами для кошек
-				a.section-brands__item(href="")
-					span.section-brands__logo 
-						img(src="./img/brand4.png" alt="")
-					span.section-brands__list 
-						span.section-brands__list-item Зерновые корма для птиц
-						span.section-brands__list-item Зерновые лакомства для птиц
-						span.section-brands__list-item Зерновые корма для грызунов
-						span.section-brands__list-item Зерновые лакомства для грызунов
+			.section-brands__items.section__slider
+				- for (var x = 0; x < 2; x++)
+					a.section-brands__item(href="")
+						span.section-brands__premium Премиум-бренд
+						span.section-brands__logo 
+							img(src="./img/brand1.png" alt="")
+						span.section-brands__list 
+							span.section-brands__list-item Консервированные корма
+							span.section-brands__list-item Сухие корма для котят
+							span.section-brands__list-item Сухие корма для взрослых кошек
+							span.section-brands__list-item Сухие корма для пожелых кошек
+							span.section-brands__list-item Гигиенические наполнители
+					a.section-brands__item(href="")
+						span.section-brands__logo 
+							img(src="./img/brand2.png" alt="")
+						span.section-brands__list 
+							span.section-brands__list-item Консервированные корма
+							span.section-brands__list-item Сухие корма для щенков
+							span.section-brands__list-item Сухие корма для взрослых собак
+							span.section-brands__list-item Сухие корма для пожилых собак
+							span.section-brands__list-item Лакомства для собак
+					a.section-brands__item(href="")
+						span.section-brands__logo 
+							img(src="./img/brand3.png" alt="")
+						span.section-brands__list 
+							span.section-brands__list-item Консервированные корма с травами для кошек
+					a.section-brands__item(href="")
+						span.section-brands__logo 
+							img(src="./img/brand4.png" alt="")
+						span.section-brands__list 
+							span.section-brands__list-item Зерновые корма для птиц
+							span.section-brands__list-item Зерновые лакомства для птиц
+							span.section-brands__list-item Зерновые корма для грызунов
+							span.section-brands__list-item Зерновые лакомства для грызунов
 	.section-faq 
 		.container 
 			.h1 ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ
