--- a/dev/styles/import/buttons.scss
+++ b/dev/styles/import/buttons.scss
@@ -14,7 +14,7 @@
   font-weight: 700;
   line-height: normal;
   @include tr;
-  background: #ff7a0e;
+  background: $color-primary;
   text-transform: uppercase;
   border-radius: 0.5rem;
   @media (max-width: $breakpoint-mobile) {
@@ -40,18 +40,22 @@
     height: 4.9rem;
     font-weight: 700;
     text-transform: uppercase;
-    color: #0c0c0c;
+    color: $color-text-dark;
     @media (max-width: $breakpoint-mobile) {
       height: 4.3rem;
       width: 100%;
       max-width: 100%;
+    }
+    &:hover {
+      border-color: #ffa200;
+      background: #ffa200;
     }
   }
   &_reset {
     height: 4rem;
     border: 1px solid rgba(12, 12, 12, 0.1);
     background: #fff;
-    color: #0c0c0c;
+    color: $color-text-dark;
     font-size: 1.4rem;
   }
   &_order {
