--- a/dev/styles/import/contacts.scss
+++ b/dev/styles/import/contacts.scss
@@ -118,7 +118,7 @@
     &__grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 1rem;
+      column-gap: 1rem;
       @media (max-width: $breakpoint-mobile) {
         grid-template-columns: 1fr;
       }
