--- a/dev/styles/import/main.scss
+++ b/dev/styles/import/main.scss
@@ -53,7 +53,7 @@
     }
   }
   &__title {
-    font-size: 70px;
+    font-size: 7rem;
     font-style: normal;
     font-weight: 700;
     line-height: 100%;
@@ -243,7 +243,7 @@
       display: block;
       width: 15rem;
       height: 1px;
-      background: #0c0c0c;
+      background: $color-text-dark;
       position: absolute;
       bottom: 0;
       left: 0;
@@ -296,20 +296,33 @@
   @media (max-width: $breakpoint-mobile) {
     margin-bottom: 6rem;
   }
+  .slick-slider {
+    margin: 0 -0.5rem;
+  }
+  .slick-slide {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
+  .slick-prev,
+  .slick-next {
+    top: 9.5rem;
+    margin-top: 0;
+  }
+
   &__items {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 1rem;
-    row-gap: 3rem;
-    @media (max-width: $breakpoint-mobile) {
-      overflow-x: scroll;
-      gap: 1.7rem;
-      display: flex;
-    }
+    // display: grid;
+    // grid-template-columns: repeat(4, 1fr);
+    // column-gap: 1rem;
+    // row-gap: 3rem;
+    // @media (max-width: $breakpoint-mobile) {
+    //   overflow-x: scroll;
+    //   gap: 1.7rem;
+    //   display: flex;
+    // }
   }
   &__item {
-    @media (max-width: $breakpoint-mobile) {
-      width: 25.4rem;
+    @media (max-width: $breakpoint-tablet) {
+      max-width: 25.4rem;
       flex: none;
     }
   }
@@ -320,7 +333,7 @@
     @include flexcc;
     position: relative;
     margin-bottom: 3rem;
-    @media (max-width: $breakpoint-mobile) {
+    @media (max-width: $breakpoint-tablet) {
       margin-bottom: 1.5rem;
       height: 19.4rem;
       padding: 0.8rem;
@@ -328,7 +341,7 @@
   }
   &__img {
     max-height: 21rem;
-    @media (max-width: $breakpoint-mobile) {
+    @media (max-width: $breakpoint-tablet) {
       max-height: 16rem;
     }
   }
@@ -356,25 +369,32 @@
     &:hover {
       color: #ffa200;
     }
-    @media (max-width: $breakpoint-mobile) {
+    @media (max-width: $breakpoint-tablet) {
       font-size: 1.4rem;
     }
   }
 }
 .section-brands {
   margin-bottom: 10rem;
-  @media (max-width: $breakpoint-mobile) {
+  @media (max-width: $breakpoint-tablet) {
     margin-bottom: 6rem;
   }
+  .slick-slider {
+    margin: 0 -0.5rem;
+  }
+  .slick-slide {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
   &__items {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1rem;
-    @media (max-width: $breakpoint-mobile) {
-      overflow-x: scroll;
-      gap: 1.7rem;
-      display: flex;
-    }
+    // display: grid;
+    // grid-template-columns: repeat(4, 1fr);
+    // gap: 1rem;
+    // @media (max-width: $breakpoint-mobile) {
+    //   overflow-x: scroll;
+    //   gap: 1.7rem;
+    //   display: flex;
+    // }
   }
   &__item {
     border-radius: 1rem;
@@ -382,6 +402,7 @@
     padding: 2rem;
     position: relative;
     @include tr;
+    min-height: 31.7rem;
     &:hover {
       box-shadow: -4px 14px 33px 0px rgba(0, 0, 0, 0.1),
         -16px 57px 60px 0px rgba(0, 0, 0, 0.09),
@@ -389,10 +410,11 @@
         -64px 229px 95px 0px rgba(0, 0, 0, 0.01),
         -100px 359px 104px 0px rgba(0, 0, 0, 0);
     }
-    @media (max-width: $breakpoint-mobile) {
-      width: 25.4rem;
+    @media (max-width: $breakpoint-tablet) {
+      max-width: 25.4rem;
       flex: none;
       padding: 0.8rem;
+      min-height: 24rem;
     }
   }
   &__premium {
@@ -404,7 +426,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 0.5rem;
-    background: url(../img/star.svg) 0.7rem center no-repeat #0c0c0c;
+    background: url(../img/star.svg) 0.7rem center no-repeat $color-text-dark;
     background-size: 1.2rem;
     font-size: 1.4rem;
     font-style: normal;
@@ -415,6 +437,10 @@
     padding-left: 2.2rem;
     color: #f48c37;
     padding-right: 0.7rem;
+    @media (max-width: $breakpoint-tablet) {
+      top: 0.8rem;
+      left: 0.8rem;
+    }
   }
   &__logo {
     height: 11.2rem;
@@ -425,7 +451,7 @@
     img {
       max-height: 100%;
     }
-    @media (max-width: $breakpoint-mobile) {
+    @media (max-width: $breakpoint-tablet) {
       margin-bottom: 1.6rem;
       height: 8.8rem;
       img {
@@ -443,15 +469,15 @@
       padding: 0.2rem 0.7rem;
       border-radius: 0.5rem;
       background: #f7f7f7;
-      color: #0c0c0c;
+      color: $color-text-dark;
       font-size: 1.4rem;
       line-height: 1.2;
       @include tr;
-      @media (max-width: $breakpoint-mobile) {
+      @media (max-width: $breakpoint-tablet) {
         font-size: 1.2rem;
       }
       &:hover {
-        background: #0c0c0c;
+        background: $color-text-dark;
         color: #fff;
       }
     }
@@ -463,7 +489,7 @@
   }
   &__item {
     padding: 3rem 0;
-    border-bottom: 1px solid #0c0c0c;
+    border-bottom: 1px solid $color-text-dark;
     &:first-child {
       padding-top: 0;
     }
