--- a/dev/styles/import/product.scss
+++ b/dev/styles/import/product.scss
@@ -66,7 +66,7 @@
   }
   &__tabs {
     padding-bottom: 10rem;
-    border-bottom: 1px solid #0c0c0c;
+    border-bottom: 1px solid $color-text-dark;
     @media (max-width: $breakpoint-mobile) {
       padding-bottom: 3rem;
       border-bottom: none;
