--- a/dev/styles/import/variables.scss
+++ b/dev/styles/import/variables.scss
@@ -3,7 +3,7 @@ $font: 'Berlin Type';
 $font-second: 'Montserrat', sans-serif;
 $font-third: 'Sweet Mavka Script';
 
-$color-text-dark: rgba(12, 12, 12, 1);
+$color-text-dark: #0c0c0c;
 $color-text-light: rgba(247, 247, 247, 1);
 $color-primary: #ff7a0e;
 $color-text-accent: #ffa200;
