--- a/dev/styles/import/main.scss
+++ b/dev/styles/import/main.scss
@@ -403,12 +403,13 @@
     position: relative;
     @include tr;
     min-height: 31.7rem;
+
     &:hover {
-      box-shadow: -4px 14px 33px 0px rgba(0, 0, 0, 0.1),
-        -16px 57px 60px 0px rgba(0, 0, 0, 0.09),
-        -36px 129px 80px 0px rgba(0, 0, 0, 0.05),
-        -64px 229px 95px 0px rgba(0, 0, 0, 0.01),
-        -100px 359px 104px 0px rgba(0, 0, 0, 0);
+      // box-shadow: -4px 14px 33px 0px rgba(0, 0, 0, 0.1),
+      //   -16px 57px 60px 0px rgba(0, 0, 0, 0.09),
+      //   -36px 129px 80px 0px rgba(0, 0, 0, 0.05),
+      //   -64px 229px 95px 0px rgba(0, 0, 0, 0.01),
+      //   -100px 359px 104px 0px rgba(0, 0, 0, 0);
     }
     @media (max-width: $breakpoint-tablet) {
       max-width: 25.4rem;
