--- a/dev/pug/includes/content-brands.pug
+++ b/dev/pug/includes/content-brands.pug
@@ -17,4 +17,4 @@ main.main
 					.section-brand__title Описание
 					.section-brand__text Сухой полнорационный гипоаллергенный корм для взрослых собак крупных пород «Верные друзья» специально разработан для удовлетворения потребностей в питательных веществах организма взрослой собаки и включает в состав хондропротекторы для профилактики заболеваний суставов. Полезная рецептура содержит высококачественные и легкоусвояемые ингредиенты (мясо ягненка, рис). Ценные омега-3 и омега-6 жирные кислоты обеспечивают здоровье кожи и блестящую шерсть. Корм «Верные друзья» идеально подходит чувствительным к корму собакам с нормальными потребностями в энергии и протеине. Формула содержит все витамины и минеральные вещества, необходимые для сбалансированного питания собаки. Корм не содержит искусственные ароматизаторы и красители.
 			h2.h2 ВИДЕОпрезентация
-			a.section-brand__video(style="background-image:url(./img/cat-video.png)" href="")
+			a.section-brand__video.popup-youtube(style="background-image:url(./img/cat-video.png)" href="https://www.youtube.com/watch?v=p5828ephFKU")
