--- a/dev/styles/import/main.scss
+++ b/dev/styles/import/main.scss
@@ -309,16 +309,16 @@
     margin-top: 0;
   }
 
-  &__items {
-    // display: grid;
-    // grid-template-columns: repeat(4, 1fr);
-    // column-gap: 1rem;
-    // row-gap: 3rem;
-    // @media (max-width: $breakpoint-mobile) {
-    //   overflow-x: scroll;
-    //   gap: 1.7rem;
-    //   display: flex;
-    // }
+  &__items.no-slider {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1rem;
+    row-gap: 3rem;
+    @media (max-width: $breakpoint-mobile) {
+      overflow-x: scroll;
+      gap: 1.7rem;
+      display: flex;
+    }
   }
   &__item {
     @media (max-width: $breakpoint-tablet) {
@@ -386,15 +386,15 @@
     margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
-  &__items {
-    // display: grid;
-    // grid-template-columns: repeat(4, 1fr);
-    // gap: 1rem;
-    // @media (max-width: $breakpoint-mobile) {
-    //   overflow-x: scroll;
-    //   gap: 1.7rem;
-    //   display: flex;
-    // }
+  &__items.no-slider {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+    @media (max-width: $breakpoint-mobile) {
+      overflow-x: scroll;
+      gap: 1.7rem;
+      display: flex;
+    }
   }
   &__item {
     border-radius: 1rem;
