--- a/dev/pug/includes/content-news.pug
+++ b/dev/pug/includes/content-news.pug
@@ -8,86 +8,86 @@ main.main
 		h1.h1 НОВОСТИ И СТАТЬИ
 		.news
 			.news__items 
-				.news__item 
-					a.news__info(href="")
+				a.news__item(href="")
+					.news__info
 						img.news__img(src="./img/news1.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
-				.news__item 
-					a.news__info(href="")
+					.news__name Уже в продаже! Новая линейка сухих супер-премиальных кормов.
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news2.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news3.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news4.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news1.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news2.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news3.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news4.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news1.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news2.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news3.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news4.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news1.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Уже в продаже! Новая линейка сухих супер-премиальных кормов.
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news2.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новые виды в линейке сухих кормом ТМ Верные друзья
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news3.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
-				.news__item 
-					a.news__info(href="")
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 100 гр
+				a.news__item(href="")
+					.news__info(href="")
 						img.news__img(src="./img/news4.jpg" alt="")
 						span.news__date 13.12.2023
-					a.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
+					.news__name(href="") Новый дизайн упаковки Ночной охотник 415 гр. 
 			.pagination
 				.pagination__pages 
 					a.pagination__left(href="")
