--- a/dev/pug/includes/footer.pug
+++ b/dev/pug/includes/footer.pug
@@ -18,8 +18,8 @@ footer.footer
 							a(href="contacts.html") контакты
 				.footer__contacts 
 					a.footer__phone(href="tel:+7 928 229-78-08") +7 928 229-78-08
-					a.footer__mail(href="") pki.zoo-mir@yandex.ru
-					.footer__address 347041, Ростовская область, г. Белая Калитва, Совхозная, 52а
+					a.footer__mail(href="mailto:pki.zoo-mir@yandex.ru") pki.zoo-mir@yandex.ru
+					a.footer__address(href="" target="_blank") 347041, Ростовская область, г. Белая Калитва, Совхозная, 52а
 					.footer__socials.socials
 						a.socials__vk(href="" target="_blank") 
 						a.socials__youtube(href="" target="_blank") 
