--- a/dev/styles/import/footer.scss
+++ b/dev/styles/import/footer.scss
@@ -72,6 +72,7 @@
     font-weight: 400;
     line-height: 130%;
     margin-bottom: 3rem;
+    display: block;
   }
   &__mail {
     display: block;
