--- a/dev/styles/import/mixins.scss
+++ b/dev/styles/import/mixins.scss
@@ -1,6 +1,9 @@
 @mixin tr {
   transition: all 0.25s ease;
 }
+@mixin tr-slow {
+  transition: all 0.5s ease;
+}
 @mixin bg-img {
   background-repeat: no-repeat;
   background-position: center;
@@ -39,6 +42,12 @@
 @mixin wh($size) {
   width: $size;
   height: $size;
+}
+@mixin hover {
+  @include tr;
+  &:hover {
+    color: $color-text-accent;
+  }
 }
 @mixin filter-to-white {
   filter: brightness(0) invert(1);
